Refactored `DockerLocalAuthIT`